unpackaged/main/default/objects/CPPT_Cancelacion__c/CPPT_Cancelacion__c.object-meta.xml
<CustomObject>
    <label>Cancelación</label>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Cancelación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>