unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Cancela_Proceso_Check__c.field-meta.xml
<CustomField>
    <fullName>Cancela_Proceso_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cancela Proceso Check</label>
    <type>Checkbox</type>
</CustomField>