unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Check_Calcula_Gastos__c.field-meta.xml
<CustomField>
    <fullName>Check_Calcula_Gastos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Calcula Gastos</label>
    <type>Checkbox</type>
</CustomField>