unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Check_Cancela_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Check_Cancela_Proceso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Cancela Proceso</label>
    <type>Checkbox</type>
</CustomField>