unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Check_Reprocesa_Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Check_Reprocesa_Reembolso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Reprocesa Reembolso</label>
    <type>Checkbox</type>
</CustomField>