unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Calcula_Gastos_Operativos__c.field-meta.xml
<CustomField>
    <fullName>Chk_Calcula_Gastos_Operativos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Calcula Gastos Operativos</label>
    <type>Checkbox</type>
</CustomField>