unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Cancelacion_del_Propceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Chk_Cancelacion_del_Propceso_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Cancelación del Propceso de Venta</label>
    <type>Checkbox</type>
</CustomField>