unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Cancelacion_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Chk_Cancelacion_Escritura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Cancelación Escritura</label>
    <type>Checkbox</type>
</CustomField>