unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Cancelacion_Escritura_APC__c.field-meta.xml
<CustomField>
    <fullName>Chk_Cancelacion_Escritura_APC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Cancelación Escritura APC</label>
    <type>Checkbox</type>
</CustomField>