unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Cancelacion_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Chk_Cancelacion_Reserva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Cancelación Reserva</label>
    <type>Checkbox</type>
</CustomField>