unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Reembolso_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Chk_Reembolso_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Reembolso Aprobado</label>
    <type>Checkbox</type>
</CustomField>