unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Reembolso_x_Cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Chk_Reembolso_x_Cancelaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Reembolso por Cancelación</label>
    <type>Checkbox</type>
</CustomField>