unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Chk_Reprocesa_Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Chk_Reprocesa_Reembolso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk - Reprocesa Reembolso</label>
    <type>Checkbox</type>
</CustomField>