unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <defaultValue>&#39;yazmin.gonzalez.palomo@gmail.com&#39;</defaultValue>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>