unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Calle_Oficial__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Calle_Oficial__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle Oficial</label>
    <type>Text</type>
</CustomField>