unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Cuenta__c</fullName>
    <formula>CPPTS_Oportunidad__r.Account.FirstName + &#39; &#39; + CPPTS_Oportunidad__r.Account.LastName + &#39; &#39; + CPPTS_Oportunidad__r.Account.Apellidomaterno_cta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>