unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Estatus_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Estatus_Proceso_de_Venta__c</fullName>
    <formula>TEXT(CPPTS_Oportunidad__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Proceso de Venta</label>
    <type>Text</type>
</CustomField>