unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Fraccionamiento__c</fullName>
    <formula>CPPTS_Oportunidad__r.Fraccionamiento__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>