unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Gastos_Operativos__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Gastos_Operativos__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Gastos Operativos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>