unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Interior__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Interior__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Num_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interior</label>
    <type>Text</type>
</CustomField>