unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Lote__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Lote__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Lote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lote</label>
    <type>Text</type>
</CustomField>