unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Manzana__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Manzana__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manzana</label>
    <type>Text</type>
</CustomField>