unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Motivo_Cierre__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Motivo_Cierre__c</fullName>
    <label>Motivo Cierre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>