unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Numero_Interno__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Numero_Interno__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Num_Interno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Interno</label>
    <type>Text</type>
</CustomField>