unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Numero_Reubicaciones__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Numero_Reubicaciones__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Cantidad_de_reubicaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Reubicaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>