unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cancelaciones</relationshipLabel>
    <relationshipName>Cancelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>