unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Razon_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Razon_Rechazo__c</fullName>
    <label>Razón Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso de Retención no firmado</fullName>
            </value>
            <value>
                <fullName>Cambio de Ciudad</fullName>
            </value>
            <value>
                <fullName>Cambio de Empleo</fullName>
            </value>
            <value>
                <fullName>Cancelación Con Financiera</fullName>
            </value>
            <value>
                <fullName>Crédito Denegado</fullName>
            </value>
            <value>
                <fullName>Desempleo</fullName>
            </value>
            <value>
                <fullName>Excepción APC</fullName>
            </value>
            <value>
                <fullName>Ilocalizable</fullName>
            </value>
            <value>
                <fullName>Error de RFC</fullName>
            </value>
            <value>
                <fullName>Falta de Aportaciones</fullName>
            </value>
            <value>
                <fullName>Falta de Papelería</fullName>
            </value>
            <value>
                <fullName>Homonimia</fullName>
            </value>
            <value>
                <fullName>Motivos Personales</fullName>
            </value>
            <value>
                <fullName>Otra opción de compra</fullName>
            </value>
            <value>
                <fullName>Por error en captura</fullName>
            </value>
            <value>
                <fullName>Temas Económicos</fullName>
            </value>
            <value>
                <fullName>Problemas en la Construcción</fullName>
            </value>
            <value>
                <fullName>Recurso Vencido YY</fullName>
            </value>
            <value>
                <fullName>Sin relación laboral</fullName>
            </value>
            <value>
                <fullName>Tiempo de Entrega</fullName>
            </value>
            <value>
                <fullName>Ya cuenta con Subsidio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>