unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Reembolso_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Reembolso_Aprobado__c</fullName>
    <label>Reembolso Aprobado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>