unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Reembolso_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Reembolso_Pendiente__c</fullName>
    <label>Reembolso Pendiente $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>