unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Saldo_a_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Saldo_a_Cuenta__c</fullName>
    <label>Saldo a Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>