unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Sector__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Sector__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Sector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>