unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/CPPTS_Unidad_Privada__c.field-meta.xml
<CustomField>
    <fullName>CPPTS_Unidad_Privada__c</fullName>
    <formula>CPPTS_Oportunidad__r.Plan_de_Venta__r.Vivienda__r.Unidad_Privativa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidad Privada</label>
    <type>Text</type>
</CustomField>