unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Direccion_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Oficial__c</fullName>
    <label>Dirección Oficial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>