unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Estatus_Cancelacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Cancelacion_Formula__c</fullName>
    <formula>IMAGE( CASE( CPPTS_Estatus_Cancelacion__c,
             &quot;No iniciado&quot;, &quot;/resource/1696535368000/DotIcon_Gray?&quot;,
             &quot;Por Aprobar&quot;, &quot;/resource/DotIcon_RoyalBlue?&quot;,
             &quot;Aprobado&quot;, &quot;/resource/DotIcon_Green?&quot;,
             &quot;Rechazado&quot;, &quot;/resource/DotIcon_Red?&quot;,												
             &quot;/resource/1696535368000/DotIcon_Gray?&quot;), &quot;Estatus UST&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Cancelación</label>
    <type>Text</type>
</CustomField>