unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Estatus_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda__c</fullName>
    <inlineHelpText>El Estatus que tenia la vivienda antes de iniciar el proceso de cancelación</inlineHelpText>
    <label>Estatus Vivienda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>