unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Estatus_Vivienda_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda_Formula__c</fullName>
    <formula>CASE(Estatus_Vivienda__c,
						&quot;17&quot;,&quot;Disponible&quot;,
      &quot;11&quot;,&quot;Reservado&quot;,
      &quot;13&quot;,&quot;Formalizado&quot;,
      &quot;14&quot;,&quot;Escriturado&quot;,
      &quot;15&quot;,&quot;Entregado&quot;,
      &quot;20&quot;,&quot;No Disponible&quot;,
      &quot;21&quot;,&quot;Migración / Disponible&quot;,
						&quot;ERR - No hay un valor disponible&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Vivienda</label>
    <type>Text</type>
</CustomField>