unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <label>Manzana</label>
    <length>50</length>
    <type>Text</type>
</CustomField>