unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>