unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Numero_Interno_del__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interno_del__c</fullName>
    <label>Número Interno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>