unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Cancelaciones</relationshipLabel>
    <relationshipName>Cancelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>