unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Precio_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Lista__c</fullName>
    <formula>Plan_de_Venta__r.Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>