unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Reembolso_Aprobado_Formula__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Aprobado_Formula__c</fullName>
    <formula>IF( TEXT(CPPTS_Estatus_Aprobacion_Reembolso__c) = &quot;Aprobado&quot;,  CPPTS_Saldo_a_Cuenta__c -  CPPTS_Gastos_Operativos__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reembolso Aprobado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>