unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Reembolso_Check__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Reembolso Check</label>
    <type>Checkbox</type>
</CustomField>