unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Reembolso_Pendiente_Formula__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Pendiente_Formula__c</fullName>
    <formula>CPPTS_Saldo_a_Cuenta__c -  CPPTS_Gastos_Operativos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reembolso Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>