unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Sub_UEN_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Sub_UEN_Aprobaciones__c</fullName>
    <formula>Sub_UEN_Aprobaciones_TXT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub UEN Aprobaciones</label>
    <type>Text</type>
</CustomField>