unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Sub_UEN_Aprobaciones_TXT__c.field-meta.xml
<CustomField>
    <fullName>Sub_UEN_Aprobaciones_TXT__c</fullName>
    <label>Sub UEN Aprobaciones TXT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>