unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Tipo_de_Cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cancelaci_n__c</fullName>
    <label>Tipo de Cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitiva</fullName>
                <default>true</default>
                <label>Definitiva</label>
            </value>
            <value>
                <fullName>Resolicitud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>