unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Tipo_de_Plan_de_Venta_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Plan_de_Venta_Formula__c</fullName>
    <formula>Text(Plan_de_Venta__r.Tipo_de_Plan_de_Venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Plan de Venta</label>
    <type>Text</type>
</CustomField>