unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Tipo_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Plan_de_Venta__c</fullName>
    <formula>TEXT( Plan_de_Venta__r.Tipo_de_Plan_de_Venta__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Plan de Venta</label>
    <type>Text</type>
</CustomField>