unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Titulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Titulaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titulación</label>
    <referenceTo>Titulacion__c</referenceTo>
    <relationshipLabel>Cancelaciones</relationshipLabel>
    <relationshipName>Cancelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>