unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Total_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Pagos__c</fullName>
    <formula>Cobranza_Comercial__r.Suma_Total_de_Pagos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pagos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>