unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/UEN_APROBACIONES__c.field-meta.xml
<CustomField>
    <fullName>UEN_APROBACIONES__c</fullName>
    <formula>UEN_APROBACIONES_TXT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN APROBACIONES</label>
    <type>Text</type>
</CustomField>