unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/UEN_APROBACIONES_TXT__c.field-meta.xml
<CustomField>
    <fullName>UEN_APROBACIONES_TXT__c</fullName>
    <label>UEN APROBACIONES TXT</label>
    <length>250</length>
    <type>Text</type>
</CustomField>