unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Valor_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Valor_Escritura__c</fullName>
    <formula>Plan_de_Venta__r.Valor_Escritura_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>