unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Valor_Venta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Venta__c</fullName>
    <formula>Plan_de_Venta__r.Valor_Operacion_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>