unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Valores_UEN_Actualizados__c.field-meta.xml
<CustomField>
    <fullName>Valores_UEN_Actualizados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valores UEN Actualizados</label>
    <type>Checkbox</type>
</CustomField>