unpackaged/main/default/objects/CPPT_Cancelacion__c/fields/Ya_se_Calcularon_los_Gastos__c.field-meta.xml
<CustomField>
    <fullName>Ya_se_Calcularon_los_Gastos__c</fullName>
    <formula>IF(ISBLANK(CPPTS_Saldo_a_Cuenta__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ya se Calcularon los Gastos</label>
    <type>Checkbox</type>
</CustomField>