unpackaged/main/default/objects/CPPT_Cancelacion__c/validationRules/GAstos_operativos_menor_a_saldo_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>GAstos_operativos_menor_a_saldo_cuenta</fullName>
    <active>true</active>
    <errorConditionFormula>CPPTS_Gastos_Operativos__c &gt;  CPPTS_Saldo_a_Cuenta__c</errorConditionFormula>
    <errorDisplayField>CPPTS_Gastos_Operativos__c</errorDisplayField>
    <errorMessage>El monto ingresado no puede ser mayor a Saldo a Cuenta</errorMessage>
</ValidationRule>