unpackaged/main/default/objects/CPPT_Cancelacion__c/validationRules/Valida_gasto_operativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_gasto_operativo</fullName>
    <active>true</active>
    <errorConditionFormula>CPPTS_Gastos_Operativos__c &gt;  CPPTS_Saldo_a_Cuenta__c</errorConditionFormula>
    <errorMessage>El Gasto Operativo no puede ser mayor que Saldo a Cuenta</errorMessage>
</ValidationRule>