unpackaged/main/default/objects/CPPT_Cancelacion__c/validationRules/validacion_motivi_cierre.validationRule-meta.xml
<ValidationRule>
    <fullName>validacion_motivi_cierre</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(  CPPTS_Motivo_Cierre__c ),
OR(
 TEXT(CPPTS_Estatus_Cancelacion__c) = &#39;Por Aprobar&#39;,
 TEXT(CPPTS_Estatus_Cancelacion__c) = &#39;Aprobado&#39;
)
)</errorConditionFormula>
    <errorMessage>No se puede modificar el motivo de cierre cuando el estatus de cancelación es &quot;Por Aprobar&quot; o &quot;Aprobado&quot;</errorMessage>
</ValidationRule>