unpackaged/main/default/objects/CPPT_Cancelacion__c/validationRules/Validacion_resolicitud_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_resolicitud_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
CPPTS_Proceso_con_Resolicitud__c = true,
OR(
CONTAINS(TEXT( CPPTS_Oportunidad__r.StageName ),&#39;Reservado&#39;),
CONTAINS(TEXT( CPPTS_Oportunidad__r.StageName ),&#39;Validación&#39;),
CONTAINS(TEXT( CPPTS_Oportunidad__r.StageName ),&#39;Formalizado&#39;),
CONTAINS(TEXT( CPPTS_Oportunidad__r.StageName ),&#39;Cancelado&#39;)
)
)</errorConditionFormula>
    <errorMessage>No se puede seleccionar la opción de Resolicitud cuando el estatus del proceso de venta es diferente a &quot;Escriturado&quot; o &quot;Entregado&quot;.</errorMessage>
</ValidationRule>