unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPPTS_Estatus_Cancelacion__c</columns>
    <columns>Aplican_Cargos__c</columns>
    <columns>CPPTS_Gastos_Operativos_Propuestos__c</columns>
    <columns>CPPTS_Gastos_Operativos__c</columns>
    <columns>CPPTS_Cuenta__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CPPTS_Oportunidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Procesos de Cancelación</label>
</ListView>