unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/APC_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>APC_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>APC</label>
    <queue>APC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>