unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Cuentas_por_Cobrar_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Cuentas_por_Cobrar_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Cuentas por Cobrar</label>
    <queue>Cuentas_por_Cobrar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>