unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_Comercial_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_Comercial_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director Comercial</label>
    <queue>Director_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>