unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_General_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_General_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director General</label>
    <queue>Director_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>