unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_UEN_CUN_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_UEN_CUN_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN CUN</label>
    <queue>Director_UEN_CUN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>