unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_UEN_EDO_MEX_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_UEN_EDO_MEX_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN EDO MEX</label>
    <queue>Director_UEN_EDO_MEX</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>