unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_UEN_GLD_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_UEN_GLD_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN GLD</label>
    <queue>Director_UEN_GLD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>