unpackaged/main/default/objects/CPPT_Cancelacion__c/listViews/Director_UEN_NL1_CPPT_Cancelacion.listView-meta.xml
<ListView>
    <fullName>Director_UEN_NL1_CPPT_Cancelacion</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN NL 1</label>
    <queue>Director_UEN_NL1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>